Bug 1270252: Skip a blocklisting test when everything is blocked because of a missing driver version. Clean up some returns from blocklisting, where the status and return value were missing or inconsistent. r=BenWa

MozReview-Commit-ID: IIJGltGMjOi